done with final modifications to response document

--- a/response.tex
+++ b/response.tex
@@ -179,291 +179,349 @@ In this paper, the researchers present a new seismic hazard analysis of northern
 }
 
 \comment{1}{%
-The authors present uncertainty in their hazard estimate but do not include a more exhaustive logic tree analysis. Effectively, they have two branches: a regional model and uniform model. It appears that they apply the aleatory uncertainty in the ground motion prediction relation to a form of epistemic uncertainty, effectively double counting this uncertainty in the hazard analysis. I would prefer to see a more standard logic tree analysis where multiple GMPEs (or a backbone plus and minus one standard deviation) and uncertainty in a-value, b-value, and Mmax, for example, are considered. Barring this analysis, I would remove figure 10 and references to hazard uncertainty.
+The authors present uncertainty in their hazard estimate but do not include a more exhaustive logic tree analysis. Effectively, they have two branches: a regional model and uniform model. It appears that they apply the aleatory uncertainty in the ground motion prediction relation to a form of epistemic uncertainty, effectively double counting this uncertainty in the hazard analysis. I would prefer to see a more standard logic tree analysis where multiple GMPEs (or a backbone plus and minus one standard deviation) and uncertainty in $a$-value, $b$-value, and $M_{\max}$, for example, are considered. Barring this analysis, I would remove figure 10 and references to hazard uncertainty.
 }
 
-\response{Thanks for the comment.  Based on explanation of GMPEs section (please see comment no.27) we decided to define a suite of GMPE as well as plus and minus one standard deviation. We consider the epistemic uncertainty in tectonic seismic regions, $M_{max}$, $b-value$, and attenuation relationship through a standard logic tree analysis.}.
+\response{Thanks for the comment. Based on explanation of GMPEs section (please also see comment No.~27) we decided to address uncertainty with a backbone GMPE plus and minus one standard deviation. We also consider uncertainty in tectonic seismic regions through variations in the seismicity parameters $M_{\max}$, $b$, and combine the results using a standard logic tree analysis, as suggested. These changes are reflected at various points throughout the revised manuscript.}
 
 \comment{2}{%
 While I think that the regional and uniform models are generally correct within 1.5 degrees of the border, I think that outside of this region, they may be moderately underestimating hazard by not considering sources with 200 km of their region of interest. Their buffer zone for sources is presently 50 km.
 }
 
-\response{That is right. We increased the buffer zone up to 2 degrees.}
+\response{That is right. We increased the buffer zone up to 2 degrees. See page 4, line 100.}
 
 \comment{3}{%
 It would be good if the abstract is more specific about the results. Where is the hazard greatest? What sources contribute to regions of higher hazard?
 }
-\response{Added to the abstract.}
+
+\response{We modified the abstract accordingly, but do not provide too much detail as that would significantly increase the length of the abstract, which is not desirable. See new lines 23--25.}
 
 \comment{4}{%
 In the second paragraph of the introduction, I would include a reference to a figure of the region to help readers less familiar with the area. This figure should also be referred to in subsequent paragraphs. It is probably sufficient to move reference to figure 1 here.
 }
-\response{We  added the reference for figure 1. Thanks.}
+
+\response{We added a reference to figure 1 in page 2, line 40.}
 
 \comment{5}{%
-line 39:   eight  $\to$ eighth
+Line 39: eight $\to$ eighth
 }
+
 \response{Fixed.}
 
 \comment{6}{%
-line 55   focuses in $\to$ focuses on
+Line 55: focuses in $\to$ focuses on
 }
+
 \response{Done. Thanks.}
 
 \comment{7}{%
-line 56 $\to$ Please be more specific about how your analysis differs from previous analyses.
+Line 56: Please be more specific about how your analysis differs from previous analyses.
 }
-\response{In the introduction we explain the method and parameters here and there, however, we added a couple of sentences to briefly explain the method. Thanks}
+
+\response{We modified the introduction to better explain the method and parameters. However, there are some details we still believe go better within the subsequent sections. Changes correspond to lines 54 to 76.}
+
 \comment{8}{%
-line 60 $\to$ Can you be more specific? What are the other indicators?
+Line 60: Can you be more specific? What are the other indicators?
 }
-\response{We discussed this before. We need to remove the sentence and rewrite that part.}
+
+\response{In hindsight that was not the best choice of words. Since we modified this part of the introduction, the new text does no longer includes this sentence.}
 
 \comment{9}{%
-line 71 $\to$ Include reference? Include reference.
+Line 71: Include reference.
 }
+
 \response{Done. Thanks.}
 
 \comment{10}{%
-line 78 $\to$ reduce $\to$ acknowledge
+Line 78: reduce $\to$ acknowledge
 }
+
 \response{Fixed.}
 
 \comment{11}{%
-line 99 $\to$ Is 0.5 degrees enough? To what distance do you do your ground motion calculations? In the western United States, they are done to 200 km. In the central and eastern, they are done to 1000 km. Depending on this value, you should include sources up to this distance from your region of interest.
+Line 99: Is 0.5 degrees enough? To what distance do you do your ground motion calculations? In the western United States, they are done to 200 km. In the central and eastern, they are done to 1000 km. Depending on this value, you should include sources up to this distance from your region of interest.
 }
-\response{We reanalyze the hazard with 2 degrees buffer zone. }
+
+\response{We reanalyze the hazard with 2 degrees buffer zone. This is reflected in the new Figures 1 and 3, and in the text (line 100) as well as, of course, in the results.}
 
 \comment{12}{%
-line106 $\to$ northeast $\to$ northwest
+Line106: northeast $\to$ northwest
 }
+
 \response{Done. Thanks}
 
 \comment{13}{%
-line 114 $\to$ There is no previous mention of this earthquake. I am not sure to which earthquake you are referring. Should either the 1721 or 1780 earthquakes be the Shebli earthquake?
+Line 114: There is no previous mention of this earthquake. I am not sure to which earthquake you are referring. Should either the 1721 or 1780 earthquakes be the Shebli earthquake?
 }
-\response{Thanks for the comment. It is 26 April 1721,$M_s ~ 7.3$ earthquake}
+\response{Thanks for the comment. It is the 26 April 1721 $M_s$ 7.7 earthquake. The change is now in page 4, line 114.}
 
 \comment{14}{%
-line 180 $\to$ The smaller events should also help to inform the G-R relationship.
+Line 180: The smaller events should also help to inform the G-R relationship.
 }
-\response{Thanks for the comment. Added to the text.}
+
+\response{Thanks for the comment. Added to the text in line 182.}
 
 \comment{15}{%
-line 182 $\to$ How come this study doesn't appear in Table 3. Do they not calculate PGA for 2 and 10\% exceedance in 50 years?
+Line 182: How come this study doesn't appear in Table 3. Do they not calculate PGA for 2 and 10\% exceedance in 50 years?
 }
-\response{They didn't provide a numerical value, or numbers on the contour lines, however, we read the images with Matlab and locate the values. We added to the table. Thanks.}
+
+\response{They did not provide a numerical value, or numbers on the contour lines. However, we read the images with Matlab and located the values and now include them in the new version of Table 3.}
 
 \comment{16}{%
-line 192 $\to$ What is the total number of events before and after declustering?
+Line 192: What is the total number of events before and after declustering?
 }
-\response{Number of events before decluttering: 10441, total foreshock: 971, total aftershock: 4206, declustered data 5254. It should be noted that, these numbers are representing the events in the study region (including the bufferzone). It partly includes events from Central and Zagros region. For completeness study we studied the whole data for each region.}
+
+\response{Number of events before decluttering: 10,441; total foreshocks: 971; total aftershocks: 4,206; declustered data: 5,254. It should be noted that these numbers are representing the events in the complete study region (including the buffer zone). It partly includes events from Central and Zagros region. For the completeness, we studied the whole data for each region. This is now explained in page 7, line 195.}
 
 \comment{17}{%
-line 224 $\to$ Why did you use this method? What are the benefits of one or the other?
+Line 224: Why did you use this method? What are the benefits of one or the other?
 }
-\response{Both methods have been used extensively in previous studies. We just picked one. Text was implying that this method has beneficial to the ZMAP method, we fixed it. Thanks.}
+
+\response{Both methods have been used extensively in previous studies. We just picked one, mainly so due to ease of implementation, which also allowed us to have complete control over the final selection. The text was incorrectly implying that the goodness-of-fit rest method had benefits over the MAXC method. We fixed this and now state our reasons in a more transparent way. See page 8, line 229.}
 
 \comment{18}{%
-line 232 $\to$ It is unclear how you chose Mc. In some cases, it looks like you chose the peak goodness-of-fit value, but in others you did not. Please be more specific about how Mc was chosen.
+Line 232: It is unclear how you chose $M_c$. In some cases, it looks like you chose the peak goodness-of-fit value, but in others you did not. Please be more specific about how Mc was chosen.
 }
-\response{According to Wiemer and Wyss (2000), the priority is picking the magnitude which has the peak goodness-of-fit value. However at some cases for two or a couple of magnitudes the goodness-of-fit scores are not considerably different. In these cases, we pick the minimum magnitude, even though it doesn't have the peak goodness-of-fit value, in order to preserve the valuable earthquake event data.}
+
+\response{According to Wiemer and Wyss (2000), the priority is picking the magnitude which has the peak goodness-of-fit value. However, in some cases for two or a couple of magnitudes the goodness-of-fit scores are not considerably different. In these cases, we pick the minimum magnitude, even though it does not have the peak goodness-of-fit value, in order to preserve more data. We also consider the decay of the cumulative number of events. This is now explained in the revised manuscript in pages 8 and 9.}
 
 \comment{19}{%
-line 267 $\to$ add 'and'
+Line 267: add 'and'
 }
 \response{Added. Thanks.}
 
 \comment{20}{%
-line 289 $\to$ You might also cite the 2014 USGS National Model (Petersen et al., 2014) and the Afghanistan seismic hazard maps (Boyd et al, 2007), which include spatial variability in the smoothing parameter.
+Line 289: You might also cite the 2014 USGS National Model (Petersen et al., 2014) and the Afghanistan seismic hazard maps (Boyd et al, 2007), which include spatial variability in the smoothing parameter.
 }
-\response{Added. Thanks.}
+
+\response{We included the suggested reference, though the actual publication year is 2015.}
 
 \comment{21}{%
-line 297 $\to$ provided below $\to$ provided in the next section
+Line 297: provided below $\to$ provided in the next section.
 }
+
 \response{Fixed.}
 
 \comment{22}{%
-line 300 :  allows to draw information $\to$ allows one to draw information
+Line 300: allows to draw information $\to$ allows one to draw information
 }
+
 \response{Done.}
 
 \comment{23}{%
-line 323 $\to$ Be more specific about how HA3 computes b and Mmax. What is its method?
+Line 323: Be more specific about how HA3 computes $b$ and $M_{\max}$. What is its method?
 }
-\response{Method added. Thanks.}
+
+\response{This code uses the procedure described in Kijko and Sellevoll (1989). We added a sentence making this explicit in page 12, line 341.}
 
 \comment{24}{%
-line 335 $\to$ Different seismic zone will not necessarily have difference values of b and Mmax. Change to this: Different seismic zone may have different values of b and Mmax.
+Line 335: Different seismic zone will not necessarily have difference values of $b$ and $M_{\max}$. Change to this: Different seismic zone may have different values of $b$ and $M_{\max}$.
 }
-\response{Modified. Thanks.}
+
+\response{Modified. Thanks. See line 354.}
 
 \comment{25}{%
-line 337 $\to$ a means to reduce epistemic $\to$ a means to account for epistemic
+Line 337: a means to reduce epistemic $\to$ a means to account for epistemic
 }
+
 \response{Done.}
 
 \comment{26}{%
-line 361 $\to$ lead $\to$ leads
+Line 361: lead $\to$ leads
 }
+
 \response{Fixed. Thanks.}
 
 \comment{27}{%
-line 364 $\to$ How do you address the epistemic uncertainty generally introduced by using a suite of GMPEs?
+Line 364: How do you address the epistemic uncertainty generally introduced by using a suite of GMPEs?
 }
-\response{As mentioned in Atkinson and Adam (2013) and Atkinson et al (2014), using different GMPEs with different logic tree weights from different literature is not necessarily the best way to model the epistemic uncertainty in GMPEs. We prefer to use the alternative GMPEs and applicable data to guide the choice of a representative or central GMPE, and to define representative (upper and lower) GMPEs that express uncertainty about the central GMPE. In the previeous study (Khodaverdian 2016), they used Akkar and Bommer (2010) and Ghasemi et al (2009) along side other equations. Akkar and Bommer (2010) derived the equation up to 100 Km, which they used for 200 km. Also Ghasemi et al (2009) is presented the coefficients for spectral acceleration not PGA. Of course this alternative method has been a hotly-debated topic, and there is no clear consensus about that, however, the plots of attenuation relationships in different magnitude illustrate the fact that with this approach we can address the epistemic uncertainty in an acceptable range. We totally agree with the reviewer's comment that presenting the seismic hazard with upper and lower values (Fig 10) to address the epistemic uncertainty could be misleading for the readers. In order to address these concerns, we do the seismic hazard analysis for bigger domain (2 degrees buffer zone) and combine the results according to the logic tree scheme in Fig 9.}
+
+\response{This is a point that was also raised by Reviewer 1. As mentioned in Atkinson and Adam (2013) and Atkinson et al (2014), using different GMPEs with different logic tree weights from different literature is not necessarily the best way to model the epistemic uncertainty in GMPEs. Especially when the mean of various GMPEs are too close to each other. We prefer to use the alternative GMPEs and applicable data to guide the choice of a representative or central GMPE, and to define representative upper and lower GMPEs using the standard deviation of the chosen relationship. In order to address these concerns we now use the logic tree scheme shown in Fig.~9 and make comments with respect to this in various points throughout the revised version of the manuscript, but in particular in pages 13 and 14, lines 380--397.}
 
 \comment{28}{%
-line 365: add 'and'
+Line 365: add 'and'
 }
+
 \response{Added. Thanks.}
 
 \comment{29}{%
-line 370 $\to$ Could you consider other depths to help fill out your range of epistemic uncertainty?
+Line 370: Could you consider other depths to help fill out your range of epistemic uncertainty?
 }
-\response{The Kalkan and Gulkan (2004) attenuation relationship is originally generated for Turkey. However, in the recent test by Zafarani and Mousavi (2014), it gives acceptable results for PGA. Since the high accuracy achieved by the current depth, and we have no idea how different depth will change the results, we prefer to not to use a parameter without knowing the effects. }
+
+\response{Not really. At least we think it would not be appropriate to do so. The Kalkan and Gulkan (2004) attenuation relationship was originally generated for Turkey. Later, Zafarani and Mousavi (2014) found that this GMPE yielded acceptable results for PGA for northern Iran if calibrated with the values we report in the manuscript. Since the high accuracy achieved by using this GMPE depends on the the current choice of depth, we ignore what would be the effect of considering the variability of $h$, and suspect it will likely be to the detriment of the analysis. We make tangential mention to this in the new Section 7. See page 15, line 424.}
 
 \comment{30}{%
-line 371 $\to$ How does this value compare with the models you decided not to use?
+Line 371: How does this value compare with the models you decided not to use?
 }
-\response{In the revised version we used backbone and plus and minus one standard deviation as three GMPEs. }
+
+\response{In the revised version we use a backbone GMPE, in addition to GMPEs derived using plus and minus one standard deviation. Therefore, this comment does no longer apply.}
 
 \comment{31}{%
-line 376 $\to$ In this case, you should consider all sources with 200 km of your area of interest.
+Line 376: In this case, you should consider all sources with 200 km of your area of interest.
 }
-\response{We modified the buffer zone. Thanks.}
+\response{We modified the buffer zone and now do this. Thanks.}
 
 \comment{32}{%
-line 394:  50-years $\to$ 50-year
+Line 394: 50-years $\to$ 50-year
 }
 \response{Done.}
 
 \comment{33}{%
-line 420: with concentration $\to$ with a concentration
+Line 420: with concentration $\to$ with a concentration
 }
+
 \response{Added. Thanks.}
 
 \comment{34}{%
-line 422 $\to$ I would have stated this differently. It looks like the lower b-value in Kopeh Dagh yields relatively high hazard in the R model whereas in the U model, this low b-value has leaked into the entire region and subsequently elevated seismic hazard in all areas outside of Kopeh Dagh.
+Line 422: I would have stated this differently. It looks like the lower $b$-value in Kopeh Dagh yields relatively high hazard in the R model whereas in the U model, this low b-value has leaked into the entire region and subsequently elevated seismic hazard in all areas outside of Kopeh Dagh.
 }
-\response{Based on the modification in GMPEs and uncertainties at the revised version, we rewrite the description part.}
+
+\response{Based on the modification in GMPEs and uncertainties, we rewrote this description.}
 
 \comment{35}{%
-line 428 $\to$ Why equal weights?
+Line 428: Why equal weights?
 }
-\response{We added a comprehensive logic tree analysis after revision and modified the weights. Please see figure 9.}
+
+\response{We added a comprehensive logic tree analysis and modified the weights. Please see figure 9, and the description given in the new Section 7.}
 
 \comment{36}{%
-line 431 $\to$ I'm not sure I quite understand this. The standard deviation in the attenuation relation is considered aleatory uncertainty and is present within the hazard curve. Adding it as epistemic as well will cause double counting. If you want to include figure 10, a proper logic tree analysis to include more forms of epistemic uncertainty should be performed. For example, add branches for uncertainty in which GMPE you choose, uncertainty in b-value, uncertainty in Mmax, uncertainty in a-value, uncertainty in smoothing parameter, etc.
+Line 431: I'm not sure I quite understand this. The standard deviation in the attenuation relation is considered aleatory uncertainty and is present within the hazard curve. Adding it as epistemic as well will cause double counting. If you want to include figure 10, a proper logic tree analysis to include more forms of epistemic uncertainty should be performed. For example, add branches for uncertainty in which GMPE you choose, uncertainty in $b$-value, uncertainty in $M_{\max}$, uncertainty in $a$-value, uncertainty in smoothing parameter, etc.
 }
-\response{We modified the approach and considered the mentioned uncertainties.}
+
+\response{We modified the approach and now consider the uncertainties explicitly via a logic tree analysis. Therefore, we believe this no longer applies as the new approach is more appropriate.}
 
 \comment{37}{%
-line 434 $\to$ Just because the basic pattern appears to better follow faults in the region does not mean it's a better assessment, especially if the b-values are truly different between regions and better represented by the regional analysis.
+Line 434: Just because the basic pattern appears to better follow faults in the region does not mean it's a better assessment, especially if the $b$-values are truly different between regions and better represented by the regional analysis.
 }
-\response{That's right. Removed that part. Thanks.}
+
+\response{Agree. We believe, however, that this can be interpreted as a good indication of how the data is being captured by the analysis. We modified this.}
 
 \comment{38}{%
-line 439: of city of Tabriz $\to$ of the city of Tabriz.
+Line 439: of city of Tabriz $\to$ of the city of Tabriz.
 }
+
 \response{Fixed. Thanks.}
 
 \comment{39}{%
-line 450 $\to$  for 2 and 10\%, respectively $\to$ for 2 and 10\% in 50 years, respectively.
+Line 450: for 2 and 10\%, respectively $\to$ for 2 and 10\% in 50 years, respectively.
 }
+
 \response{Done.}
 
 \comment{40}{%
-line 453 $\to$  for a 10\% probability of exceedance ?  for a 10\% probability of exceedance in 50 years.
+Line 453: for a 10\% probability of exceedance $\to$ for a 10\% probability of exceedance in 50 years.
 }
+
 \response{Done.}
 
 \comment{41}{%
-line 455 $\to$ 0.27-0.31 g for 10\% probability of exceedance $\to$  0.27-0.31 g for the same exceedance probability
+Line 455: 0.27--0.31 g for 10\% probability of exceedance $\to$ 0.27-0.31 g for the same exceedance probability
 }
+
 \response{Done.}
 
 \comment{42}{%
-line 458 $\to$  for 2 and 10\% ? for 2 and 10\% in 50 years
+Line 458: for 2 and 10\% $\to$ for 2 and 10\% in 50 years
 }
+
 \response{Done.}
 
 \comment{43}{%
-line 461: our results are close or within $\to$ our results are close to or within
+Line 461: our results are close or within $\to$ our results are close to or within
 }
+
 \response{Done.}
 
-
 \comment{44}{%
-line 462 $\to$ Can you explain the differences in their analysis relative to yours that lead to higher values?
+Line 462: Can you explain the differences in their analysis relative to yours that lead to higher values?
 }
-\response{They used Maximum Credible Earthquake as $M_{max}$. The maximum credible earthquake is largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, as based on geologic and seismologic data, so it is higher than observation or data driven $M_{max}$. We added the explanation to the text. }
+
+\response{They used Maximum Credible Earthquake as $M_{\max}$. The maximum credible earthquake is largest earthquake that appears capable of occurring under the known tectonic framework for a specific fault or seismic source, as based on geologic and seismologic data, so it is higher than observation or data driven $M_{\max}$. We added the explanation to the text (see page 18, line 511).}
 
 \comment{45}{%
-line 466: exceedance as functions of PGA  $\to$ exceedance as functions of PGA, also known as hazard curves}
-\response{Added. Thanks.}
+Line 466: exceedance as functions of PGA $\to$ exceedance as functions of PGA, also known as hazard curves}
+
+\response{Done.}
 
 \comment{46}{%
-line 475 $\to$ Can you explain the differences in the hazard analysis that led to differences in hazard?}
-\response{Added to the text.}
+Line 475: Can you explain the differences in the hazard analysis that led to differences in hazard?}
 
+\response{We modified this paragraph and included a better description of the differences and results. See pages 18 and 19, lines 524--549.}
 
 \comment{47}{%
-lline 488 $\to$ Not sure you can say this because you don't include fault specific sources, and you do not consider a more full range of epistemic uncertainty, e.g. you only use one GMPE (though you do consider two b-value and Mmax based models).
+Line 488: Not sure you can say this because you don't include fault specific sources, and you do not consider a more full range of epistemic uncertainty, e.g. you only use one GMPE (though you do consider two $b$-value and $M_{\max}$ based models).
 }
-\response{That is right. We restate the sentence. Thanks.}
+
+\response{That is right. We restate the sentence and modified the conclusions accordingly.}
 
 \comment{48}{%
-line 488:  hazard analysis $\to$ hazard analyses
+Line 488: hazard analysis $\to$ hazard analyses
 }
+
 \response{Done.}
 
 \comment{49}{%
-line 490: models as a mean $\to$ models as a means}
+Line 490: models as a mean $\to$ models as a means}
+
 \response{Done.}
 
 \comment{50}{%
-line 493 $\to$ Though you suggest the uniform model is unrealistic on line 334.}
-\response{That's right. We meant to say less realistic. We fixed the text.}
+Line 493: Though you suggest the uniform model is unrealistic on line 334.
+}
+
+\response{Our choice of words was not the best. We meant to say less realistic. We fixed the text accordingly.}
 
 \comment{51}{%
-line 502 $\to$ for providing advise ? for providing advice}
+Line 502: for providing advise $\to$ for providing advice}
 \response{Done.}
 
 \comment{52}{%
-line 509 $\to$  Should this be Sunset?}
-\response{Yes. Thanks.}
+Line 509: Should this be Sunset?
+}
+
+\response{Yes. Thank you.}
 
 \comment{53}{%
-p 25, table2 $\to$ What did you do for the earthquakes occurring outside of these five zones?}
-\response{There are earthquakes out of the regions, mainly above the Caspian see. Since those area are not in our region of interest (They mainly are in country of Azerbaijan), and are fairly far from our region, we ignored them.}
+Page 25, Table 2: What did you do for the earthquakes occurring outside of these five zones?
+}
+
+\response{
+As it can be seen in Figure 1, earthquakes outside the regions would be too far to be included. There are earthquakes above the Caspian see, for instance, and others in the country of Azerbaijan which were ignored because they were beyond the buffer zone (which as it was mentioned before, was expanded).}
 
 \comment{54}{%
-p 26, table3 $\to$ Specify units.}
+Page 26, Table 3: Specify units.}
+
 \response{Done. Thanks.}
 
 \comment{55}{%
-p32, figure 3 $\to$ You should also show events in the buffer zone used to compute hazard.}
+Page 32, Figure 3: You should also show events in the buffer zone used to compute hazard.}
+
 \response{Done.}
 
 \comment{56}{%
-p34, figure 5 $\to$ Which seismic zone corresponds to which color? It looks like either reporting or rates have changed over time. For example, I might argue that the red region was not complete for M3 and above until 2005. }
-\response{Thanks for the comment. The problem with that region is having less than and equal sign on magnitude 4. There are many earthquakes go to that category because of that condition. Since, converting earthquake magnitude always has an error margin, we think the comment is relevant. Based on the data we assume 2005 as a completeness magnitude. We presented the legends at the bottom of the figure.}
+Page 34, Figure 5: Which seismic zone corresponds to which color? It looks like either reporting or rates have changed over time. For example, I might argue that the red region was not complete for M3 and above until 2005.
+}
+
+\response{%
+Thanks for the comment. The problem with that region is having less than and equal sign on magnitude 4. There are many earthquakes go to that category because of that condition. Since converting earthquake magnitude always has an error margin, we think the comment is relevant. Based on the data we assume 2005 as a completeness magnitude. We presented the legends at the bottom of the figure.
+}
 
 \comment{57}{%
-P37: 10 percent of probability $\to$ 10 percent probability }
+Page 37: 10 percent of probability $\to$ 10 percent probability
+}
+
 \response{Done.}
 
 \comment{58}{%
-p 39,figure 11: Include horizontal lines indicating 2 and 10\% probability of exceedance in 50 years.}
+Page 39, Figure 11: Include horizontal lines indicating 2 and 10\% probability of exceedance in 50 years.
+}
+
 \response{Included.}
 
 \comment{59}{%
-p 41, figure 12: Can you include curves or points for the other studies in Table 3?}
-\response{Added.}
+Page 41, Figure 12: Can you include curves or points for the other studies in Table 3?
+}
 
-
-
+\response{We did and made comments about this in the Results section.}
 
 \end{document}
