--- a/references.bib
+++ b/references.bib
@@ -148,7 +148,7 @@
   Pages                    = {1141–1144},
   Volume                   = {85},
 
-  __markedentry            = {[naeem:6]},
+  __markedentry            = {[naeem:]},
   Doi                      = {10.1785/0220140120},
   ISSN                     = {1938-2057},
   Owner                    = {naeem},
@@ -297,6 +297,13 @@
 
   Doi                      = {10.1007/s11069-014-1537-1},
   Publisher                = {Springer}
+}
+
+@Book{Boyd2007,
+  Title                    = {Preliminary Earthquake Hazard Map of {A}fghanistan},
+  Author                   = {Boyd, Oliver S and Mueller, Charles S and Rukstales, Kenneth},
+  Publisher                = {US Geological Survey},
+  Year                     = {2007}
 }
 
 @InCollection{Boyd2008,
@@ -929,7 +936,6 @@
 }
 
 @Book{Petersen2008,
-
   Title                    = {Documentation for the 2008 {U}pdate of the {U}nited {S}tates {N}ational {S}eismic {H}azard {M}aps},
   Author                   = {Petersen, Mark D and Frankel, Arthur D and Harmsen, Stephen C and Mueller, Charles S and Haller, Kathleen M and Wheeler, Russell L and Wesson, Robert L and Zeng, Yuehua and Boyd, Oliver S and Perkins, David M and Luco, Nicolas and Field, Edward H and Wills, Chris J and Rukstales, Kenneth S },
   Publisher                = {US Geological Survey},
@@ -994,6 +1000,26 @@
   Address                  = {San Francisco, United States}
 }
 
+@Article{Satoh2001,
+  Title                    = {Inversion of Strain-Dependent Nonlinear Characteristics of Soils Using Weak and Strong Motions Observed by Borehole Sites in {Japan}},
+  Author                   = {Satoh, T. and Fushimi, M. and Tatsumi, Y.},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {2001},
+
+  Month                    = {Apr},
+  Number                   = {2},
+  Pages                    = {365–380},
+  Volume                   = {91},
+
+  __markedentry            = {[naeem:6]},
+  Doi                      = {10.1785/0120000049},
+  ISSN                     = {0037-1106},
+  Owner                    = {naeem},
+  Publisher                = {Seismological Society of America (SSA)},
+  Timestamp                = {2017.01.12},
+  Url                      = {http://dx.doi.org/10.1785/0120000049}
+}
+
 @Article{Scherbaum_2004_BSSA,
   Title                    = {On the use of response spectral-reference data for the selection of ground-motion models for seismic hazard analysis: {T}he case of rock motion},
   Author                   = {Scherbaum, F. and Cotton, F. and Smith, P.},
@@ -1053,7 +1079,6 @@
   Pages                    = {645–679},
   Volume                   = {188},
 
-  __markedentry            = {[naeem:]},
   Doi                      = {10.1111/j.1365-246x.2011.05287.x},
   ISSN                     = {0956-540X},
   Owner                    = {naeem},
@@ -1150,6 +1175,7 @@
   Number                   = {4},
   Pages                    = {1630–1648},
   Volume                   = {101},
+
   Doi                      = {10.1785/0120090340},
   ISSN                     = {0037-1106},
   Owner                    = {naeem},
@@ -1237,11 +1263,5 @@
   Publisher                = {Springer}
 }
 
-@Book{Boyd2007,
-  Title                    = {Preliminary Earthquake Hazard Map of {A}fghanistan},
-  Author                   = {Boyd, Oliver S and Mueller, Charles S and Rukstales, Kenneth},
-  Publisher                = {US Geological Survey},
-  Year                     = {2007}
-}
-
 @comment{jabref-meta: databaseType:biblatex;}
+
